--- a/packages/Bikecourse/DESCRIPTION
+++ b/packages/Bikecourse/DESCRIPTION
@@ -1,15 +1,12 @@
 Package: Bikecourse
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Use for the SLU reproductibility course for project
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Nannet Fabri
+Maintainer: Nannet Fabri <nannet.fabri@slu.se>
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
-  dunn.test,
-  multcompView
+  dunn.test (== 1.3.5),
+  multcompView (== 0.1-7)
